Revert "Feature/file modifications"